--- a/index.html
+++ b/index.html
@@ -676,8 +676,8 @@
     <section class="team">
         <div class="inner-team">
             <div class="header-team">
-                <span id="">Meet Us</span>
-                <span id="">Our Dedicated Team</span>
+                <span id="small-text">Meet Us</span>
+                <span id="big-text">Our Dedicated Team</span>
             </div>
         </div>
 
@@ -685,16 +685,87 @@
             <div class="column-items-team">
                 <div class="item-team">
                     <div id="inner">
-                        <div id="image-item">
-
+                        <div>
+                            <img id="image-item" src="img/wom.png">
+                        </div>
+                    </div>
+                    <div id="name-of-item">
+                        <span>Ann Koller</span>
+                    </div>
+                    <div id="position">
+                        <span>CEO</span>
+                    </div>
+                    <div id="sub-item">
+                        <span>Ann is an artistically talented creator of functional and aesthetic residential and
+                            commercial spaces.</span>
+                    </div>
+                    <div class="social-icon-team">
+                        <div id="icon">
+                            <img src="img/facebook-icon-black.svg">
+                        </div>
+                        <div id="icon">
+                            <img src="img/instagram-icon-black.svg">
+                        </div>
+                        <div id="icon">
+                            <img src="img/youtube-icon-black.svg">
                         </div>
                     </div>
                 </div>
                 <div class="item-team">
-
+                    <div id="inner">
+                        <div>
+                            <img id="image-item" src="img/man.webp">
+                        </div>
+                    </div>
+                    <div id="name-of-item">
+                        <span>Tomas Merch</span>
+                    </div>
+                    <div id="position">
+                        <span>Chief Designier</span>
+                    </div>
+                    <div id="sub-item">
+                        <span>Tomas is a skilled interior and exterior designer with more than 150 implement projects in
+                            his portfolio.</span>
+                    </div>
+                    <div class="social-icon-team">
+                        <div id="icon">
+                            <img src="img/facebook-icon-black.svg">
+                        </div>
+                        <div id="icon">
+                            <img src="img/instagram-icon-black.svg">
+                        </div>
+                        <div id="icon">
+                            <img src="img/youtube-icon-black.svg">
+                        </div>
+                    </div>
                 </div>
                 <div class="item-team">
-
+                    <div id="inner">
+                        <div>
+                            <img id="image-item" src="img/wom-top.webp">
+                        </div>
+                    </div>
+                    <div id="name-of-item">
+                        <span>Kelly Shimmer</span>
+                    </div>
+                    <div id="position">
+                        <span>Chief Architect</span>
+                    </div>
+                    <div id="sub-item">
+                        <span>Kelly joined us when we broke the new ground of architecture services, along with
+                            construction management.</span>
+                    </div>
+                    <div class="social-icon-team">
+                        <div id="icon">
+                            <img src="img/facebook-icon-black.svg">
+                        </div>
+                        <div id="icon">
+                            <img src="img/instagram-icon-black.svg">
+                        </div>
+                        <div id="icon">
+                            <img src="img/youtube-icon-black.svg">
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -713,7 +784,7 @@
     <script type="text/javascript" src="slick/slick.min.js"></script>
     <script>
         $(".slider").slick({
-            // dots: true,
+            dots: true,
             infinite: true,
             slidesToShow: 4,
             slidesToScroll: 1
