--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <link rel="stylesheet" href="collab.css">
     <link rel="stylesheet" href="carousel.css">
     <link rel="stylesheet" href="team.css">
+    <link rel="stylesheet" href="testimonials.css">
     <link rel="stylesheet" type="text/css" href="slick/slick.css" />
     <link rel="stylesheet" type="text/css" href="slick/slick-theme.css" />
 
@@ -674,13 +675,14 @@
     </section>
 
     <section class="team">
-        <div class="inner-team">
-            <div class="header-team">
-                <span id="small-text">Meet Us</span>
-                <span id="big-text">Our Dedicated Team</span>
+        <header>
+            <div class="inner-header">
+                <div class="content-header">
+                    <span id="small-text">Meet Us</span>
+                    <span id="big-text">Our Dedicated Team</span>
+                </div>
             </div>
-        </div>
-
+        </header>
         <div class="items-team">
             <div class="column-items-team">
                 <div class="item-team">
@@ -769,7 +771,21 @@
                 </div>
             </div>
         </div>
+    </section>
+    <section class="block">
+        <header>
+            <div class="inner-header">
+                <div class="content-header">
+                    <span id="small-text">Testimonials</span>
+                    <span id="big-text">What Our Clients Say</span>
+                </div>
+            </div>
+        </header>
+        <div class="section-content">
+            <div class="inner-content">
 
+            </div>
+        </div>
     </section>
 
     <footer>
