configuring sections by width and configuring the slider

--- a/index.html
+++ b/index.html
@@ -76,9 +76,6 @@
                                 </span>
                             </div>
                         </div>
-                        <div class="content-grid">
-                            <div class="content-empty"></div>
-                        </div>
                     </div>
                 </div>
                 <div class="button-banner">
@@ -102,101 +99,100 @@
     </section>
     </header>
     <!-- <main> -->
-    <section class="cont-collection">
-        <div class="cont-section-inner-collection">
-            <div class="box-section">
-                <div class="box-section-3-items">
-                    <div class="collection-inner-block">
-                        <div class="content-grid">
-                            <div class="item-group">
-                                <div class="icon-small">
-                                    <img src="img/house-red.svg" alt="icon red house"></img>
-                                </div>
+    <section class="global-section" id="collection">
+        <div class="section-inner">
+            <div class="column-items-team">
+                <div class="collection-inner-block">
+                    <div class="content-grid">
+                        <div class="item-group">
+                            <div class="icon-small">
+                                <img src="img/house-red.svg" alt="icon red house"></img>
                             </div>
+                        </div>
+                        <p class="titel-2">
+                            <span class="box-title-2">
+                                <span class="text-title-2">
+                                    Architecture
+                                </span>
+                            </span>
+                        </p>
+                        <div class="line">
+                            <div class="red-line"></div>
+                        </div>
+                        <span class="box-subtitle-title-2">
+                            <span class="text-subtitle-title-2"> Every architecture design project is a
+                                challenge
+                                that
+                                we accept eagerly. Take a
+                                closer look at our top projects.</span>
+                        </span>
+                        <div class="group-learn">
+                            <div class="btn-group-inner">
+                                <a href="#"><button class="button learn"><span class="arrow"><img
+                                                src="img/arrow-icon-circle.svg"> </span>Learn more</button></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="collection-inner-block">
+                    <div class="content-grid">
+                        <div class="item-group">
+                            <div class="icon-small">
+                                <img src="img/plan.svg" alt="icon plan"></img>
+                            </div>
+                        </div>
+                        <div class="line-after-red">
                             <p class="titel-2">
                                 <span class="box-title-2">
                                     <span class="text-title-2">
-                                        Architecture
+                                        Exterior Design
                                     </span>
                                 </span>
                             </p>
-                            <div class="line">
-                                <div class="red-line"></div>
-                            </div>
-                            <span class="box-subtitle-title-2">
-                                <span class="text-subtitle-title-2"> Every architecture design project is a
-                                    challenge
-                                    that
-                                    we accept eagerly. Take a
-                                    closer look at our top projects.</span>
-                            </span>
-                            <div class="group-learn">
-                                <div class="btn-group-inner">
-                                    <a href="#"><button class="button learn"><span class="arrow"><img
-                                                    src="img/arrow-icon-circle.svg"> </span>Learn more</button></a>
-                                </div>
+                        </div>
+                        <span class="box-subtitle-title-2">
+                            <span class="text-subtitle-title-2"> We give your office and homes the most
+                                attractive look, improving the functionality of your property by optimizing the
+                                space. </span>
+                        </span>
+                        <div class="group-learn">
+                            <div class="btn-group-inner">
+                                <a href="#"><button class="button learn"><span class="arrow"><img
+                                                src="img/arrow-icon-circle.svg"> </span>Learn more</button></a>
                             </div>
                         </div>
                     </div>
-                    <div class="collection-inner-block">
-                        <div class="content-grid">
-                            <div class="item-group">
-                                <div class="icon-small">
-                                    <img src="img/plan.svg" alt="icon plan"></img>
-                                </div>
-                            </div>
-                            <div class="line-after-red">
-                                <p class="titel-2">
-                                    <span class="box-title-2">
-                                        <span class="text-title-2">
-                                            Exterior Design
-                                        </span>
-                                    </span>
-                                </p>
-                            </div>
-                            <span class="box-subtitle-title-2">
-                                <span class="text-subtitle-title-2"> We give your office and homes the most
-                                    attractive look, improving the functionality of your property by optimizing the
-                                    space. </span>
-                            </span>
-                            <div class="group-learn">
-                                <div class="btn-group-inner">
-                                    <a href="#"><button class="button learn"><span class="arrow"><img
-                                                    src="img/arrow-icon-circle.svg"> </span>Learn more</button></a>
-                                </div>
+                </div>
+                <div class="collection-inner-block">
+                    <div class="content-grid">
+                        <div class="item-group">
+                            <div class="icon-small">
+                                <img src="img/ruler.svg" alt="icon ruler"></img>
                             </div>
                         </div>
-                    </div>
-                    <div class="collection-inner-block-end">
-                        <div class="content-grid">
-                            <div class="item-group">
-                                <div class="icon-small">
-                                    <img src="img/ruler.svg" alt="icon ruler"></img>
-                                </div>
-                            </div>
-                            <div class="line-after-red">
-                                <p class="titel-2">
-                                    <span class="box-title-2">
-                                        <span class="text-title-2">
-                                            Interior Design
-                                        </span>
+                        <div class="line-after-red">
+                            <p class="titel-2">
+                                <span class="box-title-2">
+                                    <span class="text-title-2">
+                                        Interior Design
                                     </span>
-                                </p>
-                            </div>
-                            <span class="box-subtitle-title-2">
-                                <span class="text-subtitle-title-2"> From bedrooms to conference halls, we offer you
-                                    our professional vision of modern and comfortable premises. </span>
-                            </span>
-                            <div class="group-learn">
-                                <div class="btn-group-inner">
-                                    <a href="#"><button class="button learn"><span class="arrow"><img
-                                                    src="img/arrow-icon-circle.svg"> </span>Learn more</button></a>
-                                </div>
+                                </span>
+                            </p>
+                        </div>
+                        <span class="box-subtitle-title-2">
+                            <span class="text-subtitle-title-2"> From bedrooms to conference halls, we offer you
+                                our professional vision of modern and comfortable premises. </span>
+                        </span>
+                        <div class="group-learn">
+                            <div class="btn-group-inner">
+                                <a href="#"><button class="button learn"><span class="arrow"><img
+                                                src="img/arrow-icon-circle.svg"> </span>Learn more</button></a>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
+            <!-- </div> -->
         </div>
     </section>
     <section class="who-we-are">
@@ -674,98 +670,101 @@
         </div>
     </section>
 
-    <section class="team">
-        <header>
-            <div class="inner-header">
-                <div class="content-header">
-                    <span id="small-text">Meet Us</span>
-                    <span id="big-text">Our Dedicated Team</span>
-                </div>
-            </div>
-        </header>
-        <div class="items-team">
-            <div class="column-items-team">
-                <div class="item-team">
-                    <div id="inner">
-                        <div>
-                            <img id="image-item" src="img/wom.png">
-                        </div>
-                    </div>
-                    <div id="name-of-item">
-                        <span>Ann Koller</span>
-                    </div>
-                    <div id="position">
-                        <span>CEO</span>
-                    </div>
-                    <div id="sub-item">
-                        <span>Ann is an artistically talented creator of functional and aesthetic residential and
-                            commercial spaces.</span>
-                    </div>
-                    <div class="social-icon-team">
-                        <div id="icon">
-                            <img src="img/facebook-icon-black.svg">
-                        </div>
-                        <div id="icon">
-                            <img src="img/instagram-icon-black.svg">
-                        </div>
-                        <div id="icon">
-                            <img src="img/youtube-icon-black.svg">
-                        </div>
+    <section class="global-section">
+        <div class="section-inner">
+            <header>
+                <div class="inner-header">
+                    <div class="content-header">
+                        <span id="small-text">Meet Us</span>
+                        <span id="big-text">Our Dedicated Team</span>
                     </div>
                 </div>
-                <div class="item-team">
-                    <div id="inner">
-                        <div>
-                            <img id="image-item" src="img/man.webp">
+            </header>
+            <div class="items-container">
+                <div class="column-items-team">
+                    <div class="item-team">
+                        <div id="inner">
+                            <div>
+                                <img id="image-item" src="img/wom.png">
+                            </div>
+                        </div>
+                        <div id="name-of-item">
+                            <span>Ann Koller</span>
+                        </div>
+                        <div id="position">
+                            <span>CEO</span>
+                        </div>
+                        <div id="sub-item">
+                            <span>Ann is an artistically talented creator of functional and aesthetic residential and
+                                commercial spaces.</span>
+                        </div>
+                        <div class="social-icon-team">
+                            <div id="icon">
+                                <img src="img/facebook-icon-black.svg">
+                            </div>
+                            <div id="icon">
+                                <img src="img/instagram-icon-black.svg">
+                            </div>
+                            <div id="icon">
+                                <img src="img/youtube-icon-black.svg">
+                            </div>
                         </div>
                     </div>
-                    <div id="name-of-item">
-                        <span>Tomas Merch</span>
-                    </div>
-                    <div id="position">
-                        <span>Chief Designier</span>
-                    </div>
-                    <div id="sub-item">
-                        <span>Tomas is a skilled interior and exterior designer with more than 150 implement projects in
-                            his portfolio.</span>
-                    </div>
-                    <div class="social-icon-team">
-                        <div id="icon">
-                            <img src="img/facebook-icon-black.svg">
+                    <div class="item-team">
+                        <div id="inner">
+                            <div>
+                                <img id="image-item" src="img/man.webp">
+                            </div>
                         </div>
-                        <div id="icon">
-                            <img src="img/instagram-icon-black.svg">
+                        <div id="name-of-item">
+                            <span>Tomas Merch</span>
                         </div>
-                        <div id="icon">
-                            <img src="img/youtube-icon-black.svg">
+                        <div id="position">
+                            <span>Chief Designier</span>
+                        </div>
+                        <div id="sub-item">
+                            <span>Tomas is a skilled interior and exterior designer with more than 150 implement
+                                projects in
+                                his portfolio.</span>
+                        </div>
+                        <div class="social-icon-team">
+                            <div id="icon">
+                                <img src="img/facebook-icon-black.svg">
+                            </div>
+                            <div id="icon">
+                                <img src="img/instagram-icon-black.svg">
+                            </div>
+                            <div id="icon">
+                                <img src="img/youtube-icon-black.svg">
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="item-team">
-                    <div id="inner">
-                        <div>
-                            <img id="image-item" src="img/wom-top.webp">
+                    <div class="item-team">
+                        <div id="inner">
+                            <div>
+                                <img id="image-item" src="img/wom-top.webp">
+                            </div>
                         </div>
-                    </div>
-                    <div id="name-of-item">
-                        <span>Kelly Shimmer</span>
-                    </div>
-                    <div id="position">
-                        <span>Chief Architect</span>
-                    </div>
-                    <div id="sub-item">
-                        <span>Kelly joined us when we broke the new ground of architecture services, along with
-                            construction management.</span>
-                    </div>
-                    <div class="social-icon-team">
-                        <div id="icon">
-                            <img src="img/facebook-icon-black.svg">
+                        <div id="name-of-item">
+                            <span>Kelly Shimmer</span>
                         </div>
-                        <div id="icon">
-                            <img src="img/instagram-icon-black.svg">
+                        <div id="position">
+                            <span>Chief Architect</span>
                         </div>
-                        <div id="icon">
-                            <img src="img/youtube-icon-black.svg">
+                        <div id="sub-item">
+                            <span>Kelly joined us when we broke the new ground of architecture services, along with
+                                construction management.</span>
+                        </div>
+                        <div class="social-icon-team">
+                            <div id="icon">
+                                <img src="img/facebook-icon-black.svg">
+                            </div>
+                            <div id="icon">
+                                <img src="img/instagram-icon-black.svg">
+                            </div>
+                            <div id="icon">
+                                <img src="img/youtube-icon-black.svg">
+                            </div>
                         </div>
                     </div>
                 </div>
