start block Costs

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <link rel="stylesheet" href="carousel.css">
     <link rel="stylesheet" href="team.css">
     <link rel="stylesheet" href="testimonials.css">
+    <link rel="stylesheet" href="costs.css">
     <link rel="stylesheet" type="text/css" href="slick/slick.css" />
     <link rel="stylesheet" type="text/css" href="slick/slick-theme.css" />
 
@@ -864,6 +865,73 @@
                     </div>
                 </div>
             </footer>
+        </div>
+    </section>
+
+    <section class="global-section" id="costs">
+        <div class="section-inner">
+            <header>
+                <div class="inner-header">
+                    <div class="content-header">
+                        <span id="small-text">Costs</span>
+                        <span id="big-text">Basic Pricing Plans</span> <span id="small-text-w">and get the most fair
+                            offer.</span>
+                    </div>
+                </div>
+            </header>
+            <div class="table-box">
+                <div class="content-table">
+                    <div id="item-table">
+                        <img src="img/plan-r.svg">
+                    </div>
+                    <div id="item-table">
+                        <span id="medio-t">Design Progect</span>
+                    </div>
+                    <div id="item-table">
+                        <span id="small-t">drow-up and approval</span>
+                    </div>
+                    <div id="item-table">
+                        <span id="medio-t">80$ per unit</span>
+                    </div>
+                    <div id="item-table">
+                        <button class="button-subs" id="my-form-button" type="submit">Select</button>
+                    </div>
+                </div>
+                <div class="content-table">
+                    <div id="item-table">
+                        <img src="img/interior.svg">
+                    </div>
+                    <div id="item-table">
+                        <span id="medio-t">Interio</span>
+                    </div>
+                    <div id="item-table">
+                        <span id="small-t">Alteration & new style</span>
+                    </div>
+                    <div id="item-table">
+                        <span id="medio-t">45$ per sqm</span>
+                    </div>
+                    <div id="item-table">
+                        <button class="button-subs" id="my-form-button" type="submit">Select</button>
+                    </div>
+                </div>
+                <div class="content-table">
+                    <div id="item-table">
+                        <img src="img/exterior.svg">
+                    </div>
+                    <div id="item-table">
+                        <span id="medio-t">Exterior</span>
+                    </div>
+                    <div id="item-table">
+                        <span id="small-t">Any architecture style</span>
+                    </div>
+                    <div id="item-table">
+                        <span id="medio-t">180$ per sqr</span>
+                    </div>
+                    <div id="item-table">
+                        <button class="button-subs" id="my-form-button" type="submit">Select</button>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
